--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,5 @@
-h3{
-    color: seashell;
-    font-size: 15px;
-    text-align: center;
-}
 li ul{
     display: inline-block;
-    list-style: none;
 }
 a:hover{
     color: #adadad;
@@ -24,7 +18,7 @@ button:focus {
 }
 
 .prod-banner {
-	background: url("../images/source/banner-home.jpg") no-repeat fixed top;
+    background: url("../images/banner-home.jpg") no-repeat fixed top;
     min-height: 500px;
     font-family: 'Montserrat';
     background-size: contain;
@@ -307,70 +301,96 @@ button:focus {
 }
 
 /*The cake story*/
-.story{
-    height: 400px;
-}
 .story h3{
-    font-size: 30px;
+    font-size: 40px;
+    margin-bottom: 20px;
+    width: 500px;
+    text-align: justify;
+    margin-left: 120px;
+    font-family:'Montserrat' ;
+    color: #FFFFFF;
 }
 #p3{
-    text-align: center;
+    text-align: justify;
     margin-top: 100px;
+    margin-bottom: 30px;
 }
 #dv{
-    width: 400px;
-    text-align: center;
-    margin: auto;
+    width: 500px;
+    text-align: justify;
+    margin-left: 120px;
     color: #FFFFFF;
+    font-family:'Montserrat' ;
+    font-size: 12px;
 }
 .sto{
     background-color: #13255E;
-    height: 400px;
+    height: 480px;
 }
 .bnt:hover{
-    background-color: coral;
+    background-color: #FFFFFF;
+    color: #13255E ;
+    font-weight: bold;
 }
 .bnt, .bnt1{
-    background-color: teal;
-    padding: 15px 40px;
+    background-color:#13255E;
+    color: #FFFFFF;
     border-radius: 50px;
-    border: none;
+    border-color: #FFFFFF;
     margin-left:  500px;
     text-align: center;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    padding-left: 22px;
+    padding-right: 22px;
+    margin-top: 20px;
 }
 #section{
-    width: 400px;
+    width: 550px;
     height: 350px;
-    height: 300px;
-    width: auto;
     left: 100px;
     border: none;
-    margin-left: 100px;
-    margin-top: 40px;
+    margin-left: 10px;
+    margin-top: 65px;
 }
 
 
 /*our service*/
 .hd{
-    font-size: 25px;
+    margin-top: 50px;
     text-align: center;
+    color:#FFFFFF;
+    font-size: 40px;
+    font-family: 'Montserrat';
+    padding-top: 35px;
+    padding-bottom: 10px;
+    border-bottom: 1px #FFFFFF solid;
     
 }
 .db{
+    margin-top: 60px;
     background: url(../images/source/backgroun-dich-vu.jpg) no-repeat fixed top;
 }
 .rowdb{
-    padding-top: 100px;
-    margin-top: 50px;
+    padding-top: 20px;
+    margin-top: 20px;
     
 }
 .rowdb1{
     padding-bottom: 20px;
+    color: #FFFFFF;
+    text-align: center;
+}
+.rowdb1 h3{
+    font-size: 20px;
+}
+.rowdb1 h4{
+    font-size: 12px;
+    font-weight: 300;
 }
 .imgdb{
-    width: 150px;
-    height: 150px;
-    margin-left: 50px;
+    width: 120px;
+    height: 120px;
 }
 .item{
     padding-top: 50px;
@@ -378,18 +398,9 @@ button:focus {
 .card {
     cursor: pointer
 }
-#img1 #img2 #img3 #img4{
-    height: 100%;
-    width: 100px;
-}
 .icon3{
     height: 7px;
     width: 7px;
-}
-#icon{
-    color: #FFFFFF;
-    text-align: center;
-    padding-top: 120px;
 }
 .img {
     margin-bottom: 35px;
@@ -409,27 +420,42 @@ button:focus {
 
 /*vision*/
 .hdr {
-    font-size: 25px;
-    color:  #13255E;
+    margin-top: 50px;
     text-align: center;
+    font-size: 40px;
+    font-family: 'Montserrat';
+    padding-bottom: 10px;
+    border-bottom: 1px #13255E solid;
 }
 .vision{
     text-align: center;
     color:#13255E;
+    background-color: darkgray;
+    height: 280px;
+}
+.vision-des{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
 }
 
 /*footer*/
 .footer-li,ul{
     list-style: none;
+    color: white;
 }
 .footer-bs {
     background-color:#13255E;
-	padding: 60px 40px;
-	color: rgba(255,255,255,1.00);
-	margin-bottom: 20px;
-	border-bottom-right-radius: 6px;
-	border-top-left-radius: 0px;
-    border-bottom-left-radius: 6px;
-    text-decoration: none;
+    padding: 60px 40px;
+    color: white; 
 }
+.footer-bs h4{
+    margin-left: 30px
+}
+.footer-bs a, .footer-bs p{
+    color: white;
+    margin-left: -20px;
+    font-size: 15px;   
+}
+
 
