--- a/css/about-us.css
+++ b/css/about-us.css
@@ -94,12 +94,15 @@ h4{
     text-align: center;
 }
 .footer-bs {
-    background-color: darkblue;
-	padding: 60px 40px;
-	color: rgba(255,255,255,1.00);
-	margin-bottom: 20px;
-	border-bottom-right-radius: 6px;
-	border-top-left-radius: 0px;
-    border-bottom-left-radius: 6px;
-    text-decoration: none;
+    background-color:#13255E;
+    padding: 60px 40px;
+    color: white; 
+}
+.footer-bs h4{
+    margin-left: 30px
+}
+.footer-bs a, .footer-bs p{
+    color: white;
+    margin-left: -20px;
+    font-size: 15px;   
 }
