--- a/css/about-us.css
+++ b/css/about-us.css
@@ -1,5 +1,5 @@
 /*menu*/
-ul li{
+li ul{
     display: inline-block;
 }
 .prod-menu .row {
@@ -45,18 +45,6 @@ ul li{
 .prod-banner-desc {
     font-size: 36px;
 }
-/* footer */
-.footer-bs {
-    background-color: darkblue;
-	padding: 60px 40px;
-	color: rgba(255,255,255,1.00);
-	margin-bottom: 20px;
-	border-bottom-right-radius: 6px;
-	border-top-left-radius: 0px;
-    border-bottom-left-radius: 6px;
-    text-decoration: none;
-}
-
 #icon{
     color: #FFFFFF;
     text-align: center;
