--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-li ul{
-    display: inline-block;
-}
-a:hover{
-    color: #adadad;
-}
 button.focus,
 button:focus {
     outline: 0;
@@ -360,7 +354,7 @@ button:focus {
     margin-top: 50px;
     text-align: center;
     color:#FFFFFF;
-    font-size: 40px;
+    font-size: 40px !important;
     font-family: 'Montserrat';
     padding-top: 35px;
     padding-bottom: 10px;
@@ -373,8 +367,7 @@ button:focus {
 }
 .rowdb{
     padding-top: 20px;
-    margin-top: 20px;
-    
+    margin-top: 20px;   
 }
 .rowdb1{
     padding-bottom: 20px;
@@ -422,10 +415,12 @@ button:focus {
 .hdr {
     margin-top: 50px;
     text-align: center;
-    font-size: 40px;
+    font-size: 40px ;
     font-family: 'Montserrat';
     padding-bottom: 10px;
     border-bottom: 1px #13255E solid;
+    color: #13255E;
+    font-weight: 500;
 }
 .vision{
     text-align: center;
@@ -446,16 +441,49 @@ button:focus {
 }
 .footer-bs {
     background-color:#13255E;
-    padding: 60px 40px;
+    padding-top: 50px;
+    padding-bottom: 40px;
     color: white; 
+    font-family: 'Montserrat';
 }
 .footer-bs h4{
-    margin-left: 30px
+    margin-left: 20px;
+    line-height: 50px;
+    font-weight: 600;
 }
-.footer-bs a, .footer-bs p{
+.footer-bs a{
     color: white;
     margin-left: -20px;
-    font-size: 15px;   
+    font-size: 14px; 
+    line-height: 50px;  
 }
-
-
+.footer-icon span{
+    margin-left: 20px;
+}
+.footer-social h4{
+    margin-left: 0;
+}
+.footer-social li{
+    margin-left: -40px;
+    line-height: 50px;
+}
+.footer-ns h4{
+    margin-left: 0;
+}
+.footer-ns button{
+    background-color: #13255E;
+    border: 1px white solid;
+    border-radius: 20px;
+    color: white;
+    position: absolute;
+    right: 0px; 
+    padding-left: 30px;  
+    padding-right: 30px;
+}
+.footer-ns button:hover{
+    background-color:  white;
+    color:  #13255E;
+}
+.footer{
+    border-bottom: 1px white solid;
+}
