--- a/css/about-us.css
+++ b/css/about-us.css
@@ -1,3 +1,4 @@
+
 /*menu*/
 
 .prod-menu .row {
@@ -7,14 +8,33 @@
 }
 
 .prod-banner {
-    background: url(images/source/banner-home.jpg);
+    background: url(./banner-home.jpg);
     min-height: 600px;
     font-family: 'Montserrat';
 
 }
-li ul{
+
+.prod-banner-item,
+.prod-banner-item-logo {
     display: inline-block;
-    list-style: none;
+    color: white;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+
+
+
+#icon{
+    color: #FFFFFF;
+    text-align: center;
+    padding-top: 120px;
+}
+.sub-heding{
+    text-align: center;
+    height: 200px;
+    margin-top: 50px;
 }
 .b{
     padding-top: 100px;
@@ -32,7 +52,12 @@ li ul{
 p{
     font-size: medium;
 }
-
+h1{
+    text-align: center;
+}
+h4{
+    padding-left: 50px;
+}
 .heding{
     font-size: 50px;
     text-align: center;
