--- a/css/about-us.css
+++ b/css/about-us.css
@@ -8,7 +8,7 @@
 }
 
 .prod-banner {
-    background: url(./banner-home.jpg);
+    background: url(images/source/banner-home.jpg);
     min-height: 600px;
     font-family: 'Montserrat';
 
