--- a/css/about-us.css
+++ b/css/about-us.css
@@ -1,4 +1,7 @@
-
+sub-heding{
+    padding top:100px;
+    text center: magin auto;
+}    
 .prod-menu .row {
     font-family: 'Montserrat';
     min-height: 60px;
