--- a/css/about-us.css
+++ b/css/about-us.css
@@ -1,14 +1,17 @@
   
+/*menu*/
+
 .prod-menu .row {
     font-family: 'Montserrat';
     min-height: 60px;
+    padding-top: 50px;
 }
 
 .prod-banner {
-    background: url("../images/source/banner-home.jpg") no-repeat fixed top;
-    min-height: 500px;
+    background: url(./banner-home.jpg);
+    min-height: 600px;
     font-family: 'Montserrat';
-    background-size: contain;
+
 }
 
 .prod-banner-item,
@@ -20,270 +23,48 @@
     text-align: center;
 }
 
-.prod-banner-item:hover {
-    cursor: pointer;
-    border-bottom: white solid 2px;
-}
 
-.prod-banner-item.selected {
-    border-bottom: white solid 2px;
-}
 
-.prod-banner-headline {
-    color: white;
-    margin-top: auto;
-    margin-bottom: auto;
-}
 
-.prod-banner-title {
-    font-size: 72px;
-}
-
-.prod-banner-desc {
-    font-size: 36px;
-}
-
-.prod-item {
+#icon{
+    color: #FFFFFF;
     text-align: center;
-    border-radius: 10px;
-    -webkit-box-shadow: 2px 3px 4px 1px rgba(0, 0, 0, 0.3);
-    box-shadow: 2px 3px 4px 1px rgba(0, 0, 0, 0.3);
+    padding-top: 120px;
 }
-
-.prod-item-img {
-    display: inline-block;
-}
-
-.prod-item-desc {
-    position: absolute;
-    display: inline-block;
-    top: 25%;
-    left: 30%;
-    display: none;
-}
-
-#prod_type {
-    margin-top: 50px;
-    margin-bottom: 80px;
-}
-
-.prod-type-item {
-    background-color: white;
+.sub-heding{
     text-align: center;
-    align-items: center;
-    border: 1px #13255E solid;
-    height: 40px;
-    font-size: 15px;
-    display: inline-block;
-    border-radius: 25px;
-    padding-left: 20px !important;
-    padding-right: 20px !important;
+    height: 200px;
+    margin-top: 100px;
 }
-
-.prod-type-item:hover,
-.prod-type-item.selected {
-    background-color: #13255E;
-    color: white;
-    cursor: pointer;
+.b{
+    padding-top: 100px;
+    padding: 50px;
 }
-
-@media (min-width: 768px) and (max-width: 991px) {
-    /* Show 4th slide on md if col-md-4*/
-    .carousel-inner .active.col-md-4.carousel-item+.carousel-item+.carousel-item+.carousel-item {
-        position: absolute;
-        top: 0;
-        right: -33.3333%;
-        /*change this with javascript in the future*/
-        z-index: -1;
-        display: block;
-        visibility: visible;
-    }
+#img1{
+    margin: auto;
+    width: 100%;
+    height: 300px;
 }
-
-@media (min-width: 576px) and (max-width: 768px) {
-    /* Show 3rd slide on sm if col-sm-6*/
-    .carousel-inner .active.col-sm-6.carousel-item+.carousel-item+.carousel-item {
-        position: absolute;
-        top: 0;
-        right: -50%;
-        /*change this with javascript in the future*/
-        z-index: -1;
-        display: block;
-        visibility: visible;
-    }
-}
-
-@media (min-width: 576px) {
-    .carousel-item {
-        margin-right: 0;
-    }
-    /* show 2 items */
-    .carousel-inner .active+.carousel-item {
-        display: block;
-    }
-    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left),
-    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left)+.carousel-item {
-        transition: none;
-    }
-    .carousel-inner .carousel-item-next {
-        position: relative;
-        transform: translate3d(0, 0, 0);
-    }
-    /* left or forward direction */
-    .active.carousel-item-left+.carousel-item-next.carousel-item-left,
-    .carousel-item-next.carousel-item-left+.carousel-item,
-    .carousel-item-next.carousel-item-left+.carousel-item+.carousel-item {
-        position: relative;
-        transform: translate3d(-100%, 0, 0);
-        visibility: visible;
-    }
-    /* farthest right hidden item must be also positioned for animations */
-    .carousel-inner .carousel-item-prev.carousel-item-right {
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -1;
-        display: block;
-        visibility: visible;
-    }
-    /* right or prev direction */
-    .active.carousel-item-right+.carousel-item-prev.carousel-item-right,
-    .carousel-item-prev.carousel-item-right+.carousel-item,
-    .carousel-item-prev.carousel-item-right+.carousel-item+.carousel-item {
-        position: relative;
-        transform: translate3d(100%, 0, 0);
-        visibility: visible;
-        display: block;
-        visibility: visible;
-    }
-}
-
-
-/* MD */
-
-@media (min-width: 768px) {
-    /* show 3rd of 3 item slide */
-    .carousel-inner .active+.carousel-item+.carousel-item {
-        display: block;
-    }
-    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left)+.carousel-item+.carousel-item {
-        transition: none;
-    }
-    .carousel-inner .carousel-item-next {
-        position: relative;
-        transform: translate3d(0, 0, 0);
-    }
-    /* left or forward direction */
-    .carousel-item-next.carousel-item-left+.carousel-item+.carousel-item+.carousel-item {
-        position: relative;
-        transform: translate3d(-100%, 0, 0);
-        visibility: visible;
-    }
-    /* right or prev direction */
-    .carousel-item-prev.carousel-item-right+.carousel-item+.carousel-item+.carousel-item {
-        position: relative;
-        transform: translate3d(100%, 0, 0);
-        visibility: visible;
-        display: block;
-        visibility: visible;
-    }
-}
-
-
-/* LG */
-
-@media (min-width: 991px) {
-    /* show 4th item */
-    .carousel-inner .active+.carousel-item+.carousel-item+.carousel-item {
-        display: block;
-    }
-    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left)+.carousel-item+.carousel-item+.carousel-item {
-        transition: none;
-    }
-    /* Show 5th slide on lg if col-lg-3 */
-    .carousel-inner .active.col-lg-3.carousel-item+.carousel-item+.carousel-item+.carousel-item+.carousel-item {
-        position: absolute;
-        top: 0;
-        right: -25%;
-        /*change this with javascript in the future*/
-        z-index: -1;
-        display: block;
-        visibility: visible;
-    }
-    /* left or forward direction */
-    .carousel-item-next.carousel-item-left+.carousel-item+.carousel-item+.carousel-item+.carousel-item {
-        position: relative;
-        transform: translate3d(-100%, 0, 0);
-        visibility: visible;
-    }
-    /* right or prev direction //t - previous slide direction last item animation fix */
-    .carousel-item-prev.carousel-item-right+.carousel-item+.carousel-item+.carousel-item+.carousel-item {
-        position: relative;
-        transform: translate3d(100%, 0, 0);
-        visibility: visible;
-        display: block;
-        visibility: visible;
-    }
-}
-
-#prod_slider{
-    background-image: url(../images/source/background-san-pham.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-}
-.prod_slider_suggestion {
+#p1{
     text-align: center;
-    color: #13255E;
-    font-size: 40px;
-    font-family: 'Montserrat';
-    padding-top: 35px;
-    padding-bottom: 16px;
-    border-bottom: 1px #13255E solid;
+    padding-top: 100px;
 }
-.prod-item-des{
+#p4{
+    padding-top: 100px;
+}
+p{
+    font-size: medium;
+}
+h1{
     text-align: center;
-    color: #13255E;
-    font-size: 20px;
-    font-weight: 500;
 }
-.carousel-control-prev-icon,
-.carousel-control-next-icon{
-  height: 100px;
-  width: 70px;
-  background-size: 80%, 80%;
-  border-radius: 50%;
-  border: 2px solid #13255E;
-  background-image: none;
+h4{
+    padding-left: 50px;
 }
-.carousel-control-next-icon:after
-{
-  content: '>';
-  font-size: 55px;
-  color: #13255E;
-}
-.carousel-control-prev-icon:after {
-  content: '<';
-  font-size: 55px;
-  color: #13255E;;
-}
-.prod-slider-button{
-    margin-right: -110px;
-    margin-left: -110px;
-}
-.button{
-    background-color: #13255E;
-}
-.pagination a{
-    color: #13255E;
-}
-.pagination a:hover{
-    background-color: #13255E;
-    color: white;
-}
-.pagination a.active{
-    background-color: #13255E;
-    color: white;
+.heding{
+    font-size: 50px;
+    text-align: center;
+    
 }
 /*footer*/
 .footer-li,ul{
