--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,14 @@ button:focus {
 /*menu*/
 .prod-menu .row {
     font-family: 'Montserrat';
-    min-height: 60px;
+    height: 110px;
 }
 
 .prod-banner {
-    background: url("../images/source/banner-home.jpg") no-repeat fixed top;
-    min-height: 500px;
+    background: url("../images/source/banner-home.jpg") no-repeat top;
+    min-height: 700px;
     font-family: 'Montserrat';
-    background-size: contain;
+    background-size: cover;
 }
 
 .prod-banner-item,
@@ -26,6 +26,12 @@ button:focus {
     text-transform: uppercase;
     text-align: center;
 }
+
+.prod-banner-item-logo img:hover{
+    width: 110px;
+    height: 110px; 
+    cursor: pointer
+ }
 
 .prod-banner-item:hover {
     cursor: pointer;
