--- a/event/assets/css/style.css
+++ b/event/assets/css/style.css
@@ -1,3 +1,51 @@
+.prod-menu .row {
+    font-family: 'Montserrat';
+    height: 110px;
+}
+
+.prod-banner {
+    background: url("../../sources/bg1.jpg") no-repeat fixed top;
+    min-height: 500px;
+    font-family: 'Montserrat';
+    background-size: contain;
+}
+
+.prod-banner-item,
+.prod-banner-item-logo {
+    display: inline-block;
+    color: white;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+}
+.prod-banner-item-logo img:hover{
+   width: 110px;
+   height: 110px; 
+   cursor: pointer
+}
+.prod-banner-item:hover {
+    cursor: pointer;
+    border-bottom: white solid 2px;
+}
+
+.prod-banner-item.selected {
+    border-bottom: white solid 2px;
+}
+
+.prod-banner-headline {
+    color: white;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.prod-banner-title {
+    font-size: 72px;
+}
+
+.prod-banner-desc {
+    font-size: 36px;
+}
+
 body{
     font-family: 'Georgia';
 }
@@ -27,52 +75,6 @@ img{
 .btn:focus{
     box-shadow: none;
 }
-.nav-main{
-    width: 100%;
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-.justify-between{
-    justify-content: space-between;
-}
-.form-search-main {
-    width: 50%;
-    background: #ffffff;
-    border-radius: 5px;
-    border: 1px solid #cdcdcd;
-}
-.form-search-main .form-group {
-    width: calc(100% - 50px);
-}
-.form-search-main .form-group input {
-    width: 100%;
-    border: 0;
-    box-shadow: none;
-}
-.header-top a {
-    color: #ffffff;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 600;
-}
-.header-top .logIn {
-    border-right: 2px solid #ffffff;
-    padding-right: 10px;
-    margin-right: 10px;
-}
-.shopping-cart {
-    font-size: 20px;
-}
-.nav-main .navbar-nav .nav-link {
-    padding-left: 0;
-    padding-right: 0;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 600;
-    color: #dedede;
-}
-.nav-main .navbar-nav .active .nav-link,
-.nav-main .navbar-nav .nav-link:hover {
-    color: #ffffff;
-}
 .wrap-text{
     background: #ffffff;
 }
@@ -97,25 +99,19 @@ img{
     background: #ffffff;
     padding-top: 30px;
 }
-.wrap-product .name-product{
-    color: #ff4d4f;
+.name-product{
+    color:  #13255E;
     font-size: 18px;
     margin: auto;
     margin-top: 10px;
     margin-bottom: 5px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 700;
+    text-align: center;
 }
-.wrap-product .number {
-    color: #333333;
-    font-size: 14px;
-}
-.place span, .price {
-    color: #333333;
-}
-.spec__card--bg1 {
-  background: #f0b359; 
-}
-.spec__card--bg2 {
-    background: rgb(235, 138, 98);
+.number {
+    color: #13255E;
+    font-size: 15px;
 }
 .spec__card--bg3 {
     background: rgb(169, 221, 227);
@@ -135,3 +131,168 @@ img{
     text-decoration: none;
     color: #ffffff;
 }
+
+/*footer*/
+.footer-li,ul{
+    list-style: none;
+    color: white;
+}
+.footer-bs {
+    background-color:#13255E;
+    padding-top: 50px;
+    padding-bottom: 40px;
+    color: white; 
+    font-family: 'Montserrat';
+}
+.footer-bs h4{
+    margin-left: 20px;
+    line-height: 50px;
+    font-weight: 600;
+}
+.footer-bs a{
+    color: white;
+    margin-left: -20px;
+    font-size: 14px; 
+    line-height: 50px;  
+}
+.footer-icon span{
+    margin-left: 20px;
+}
+.footer-social h4{
+    margin-left: 0;
+}
+.footer-social li{
+    margin-left: -40px;
+    line-height: 50px;
+}
+.footer-ns h4{
+    margin-left: 0;
+}
+.footer-ns button{
+    background-color: #13255E;
+    border: 1px white solid;
+    border-radius: 20px;
+    color: white;
+    position: absolute;
+    right: 0px; 
+    padding-left: 30px;  
+    padding-right: 30px;
+}
+.footer-ns button:hover{
+    background-color:  white;
+    color:  #13255E;
+}
+.footer{
+    border-bottom: 1px white solid;
+}
+  /* cart */
+#cart {
+    font-size: 25px;
+    color:  #13255E;
+    background: white;
+    border: 2px solid transparent;
+    border-radius: 10px;
+    outline: none;
+    margin-left: 1rem;
+    padding: 12px;
+    cursor: pointer;
+}
+  
+  #cart:hover {
+    border-color: #13255E;
+  }
+.cart-header {
+    font-weight: bold;
+    font-size: 1.25em;
+    color: #333;
+  }
+  
+  .cart-column {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid black;
+    margin-right: 1.5em;
+    padding-bottom: 10px;
+    margin-top: 10px;
+  }
+  
+  .cart-row {
+    display: flex;
+  }
+  
+  .cart-item {
+    width: 45%;
+  }
+  
+  .cart-price {
+    width: 20%;
+    font-size: 1.2em;
+    color: #333;
+  }
+  
+  .cart-quantity {
+    width: 35%;
+  }
+  
+  .cart-item-title {
+    color: #333;
+    margin-left: .5em;
+    font-size: 1.2em;
+  }
+  
+  .cart-item-image {
+    width: 75px;
+    height: auto;
+    border-radius: 10px;
+  }
+  
+  .btn-danger {
+    color: white;
+    background-color: #EB5757;
+    border: none;
+    border-radius: .3em;
+    font-weight: bold;
+  }
+  
+  .btn-danger:hover {
+    background-color: #CC4C4C;
+  }
+  
+  .cart-quantity-input {
+    height: 34px;
+    width: 50px;
+    border-radius: 5px;
+    border: 1px solid #56CCF2;
+    background-color: #eee;
+    color: #333;
+    padding: 0;
+    text-align: center;
+    font-size: 1.2em;
+    margin-right: 25px;
+  }
+  
+  .cart-row:last-child {
+    border-bottom: 1px solid black;
+  }
+  
+  .cart-row:last-child .cart-column {
+    border: none;
+  }
+  
+  .cart-total {
+    text-align: end;
+    margin-top: 10px;
+    margin-right: 10px;
+  }
+  
+  .cart-total-title {
+    font-weight: bold;
+    font-size: 1.5em;
+    color: black;
+    margin-right: 20px;
+  }
+  
+  .cart-total-price {
+    color: #333;
+    font-size: 1.1em;
+  }
