--- a/css/product_all.css
+++ b/css/product_all.css
@@ -1,13 +1,13 @@
 .prod-menu .row {
     font-family: 'Montserrat';
-    min-height: 60px;
+    min-height: 110px;
 }
 
 .prod-banner {
-    background: url("../images/source/banner-home.jpg") no-repeat fixed top;
-    min-height: 500px;
+    background: url("../images/source/banner-home.jpg") no-repeat top;
+    min-height: 600px;
     font-family: 'Montserrat';
-    background-size: contain;
+    background-size: cover;
 }
 
 .prod-banner-item,
@@ -18,7 +18,11 @@
     text-transform: uppercase;
     text-align: center;
 }
-
+.prod-banner-item-logo img:hover{
+   width: 110px;
+   height: 110px; 
+   cursor: pointer
+}
 .prod-banner-item:hover {
     cursor: pointer;
     border-bottom: white solid 2px;
@@ -57,8 +61,11 @@
     position: absolute;
     display: inline-block;
     top: 25%;
-    left: 30%;
+    left: 25%;
     display: none;
+}
+.prod-item-desc h2{
+    font-size: 20px;
 }
 
 #prod_type {
@@ -188,9 +195,6 @@
     }
 }
 
-
-/* LG */
-
 @media (min-width: 991px) {
     /* show 4th item */
     .carousel-inner .active+.carousel-item+.carousel-item+.carousel-item {
@@ -246,6 +250,37 @@
     font-size: 20px;
     font-weight: 500;
 }
+.prod-item button{
+    background-color: white;
+    color:#13255E;
+    font-weight: 600;
+    width: 115px;
+    font-size: 14px;
+    text-align: center;
+    
+}
+.prod-item button:hover{
+    background-color:#13255E;
+    color: white;
+    
+}
+.prod-item-name{
+    color: #13255E;
+    font-weight: 700;
+    font-size: 20px;
+}
+.prod-item-price{
+    font-size: 25px;
+}
+.icon-add-to-cart{
+    cursor: pointer;
+    width:27px; 
+    height:27px; 
+}
+.icon-add-to-cart:hover{
+    width:35px; 
+    height:35px;
+}
 .carousel-control-prev-icon,
 .carousel-control-next-icon{
   height: 100px;
@@ -269,9 +304,6 @@
 .prod-slider-button{
     margin-right: -110px;
     margin-left: -110px;
-}
-.button{
-    background-color: #13255E;
 }
 .pagination a{
     color: #13255E;
@@ -346,7 +378,7 @@ input {
 input[type="date"] {
     padding: 4px 5px;
     }
-    select {
+select {
     width: 100%;
     padding: 7px 0;
     background: transparent;
@@ -387,26 +419,13 @@ input[type="date"]::-webkit-inner-spin-button {
     margin-top: 10px;
     text-align: center;
     }
-button {
-    width: 150px;
-    padding: 10px;
-    border: none;
-    border-radius: 5px; 
-    background: #13255E;
-    font-size: 16px;
-    color: #fff;
-    cursor: pointer;
-    }
-button:hover {
-    background: #13255E;
-    }
     @media (min-width: 568px) {
     .name-item, .city-item {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     }
-    /*footer*/
+/*footer*/
 .footer-li,ul{
     list-style: none;
     color: white;
@@ -459,4 +478,205 @@ button:hover {
 .footer{
     border-bottom: 1px white solid;
 }
-      
+
+/* modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+  
+  .modal-content {
+    margin: 0 auto;
+    width: 50%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 0, 0, .2);
+    border-radius: .3rem;
+    outline: 0;
+  
+  }
+  
+  .modal-body {
+    padding: 1rem;
+  }
+  
+  .modal-footer {
+    display: flex;
+    border-top: 1px solid #aaaaaa;
+    padding: 1rem;
+    flex-direction: row;
+    justify-content: flex-end;
+    border-top: 1px solid #aaaaaa;
+    padding: 1rem;
+  }
+  
+  .modal-footer>:not(:first-child) {
+    margin-left: .25rem;
+  }
+  
+  .btn {
+    cursor: pointer;
+    outline: none;
+    font-weight: 400;
+    line-height: 1.25;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    border: 1px solid transparent;
+    padding: .5rem 1rem;
+    font-size: 1rem;
+    border-radius: .25rem;
+    transition: all .2s ease-in-out;
+  }
+  
+  .modal-header {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #aaaaaa;
+    padding: 1rem;
+  }
+  
+  h5.modal-title {
+    font-size: 1.5rem;
+  }
+  
+  .close {
+    color: #aaaaaa;
+    font-size: 28px;
+    font-weight: bold;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+    /* cart */
+  #cart {
+    font-size: 25px;
+    color:  #13255E;
+    background: white;
+    border: 2px solid transparent;
+    border-radius: 10px;
+    outline: none;
+    margin-left: 1rem;
+    padding: 12px;
+    cursor: pointer;
+  }
+  
+  #cart:hover {
+    border-color: #13255E;
+  }
+.cart-header {
+    font-weight: bold;
+    font-size: 1.25em;
+    color: #333;
+  }
+  
+  .cart-column {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid black;
+    margin-right: 1.5em;
+    padding-bottom: 10px;
+    margin-top: 10px;
+  }
+  
+  .cart-row {
+    display: flex;
+  }
+  
+  .cart-item {
+    width: 45%;
+  }
+  
+  .cart-price {
+    width: 20%;
+    font-size: 1.2em;
+    color: #333;
+  }
+  
+  .cart-quantity {
+    width: 35%;
+  }
+  
+  .cart-item-title {
+    color: #333;
+    margin-left: .5em;
+    font-size: 1.2em;
+  }
+  
+  .cart-item-image {
+    width: 75px;
+    height: auto;
+    border-radius: 10px;
+  }
+  
+  .btn-danger {
+    color: white;
+    background-color: #EB5757;
+    border: none;
+    border-radius: .3em;
+    font-weight: bold;
+  }
+  
+  .btn-danger:hover {
+    background-color: #CC4C4C;
+  }
+  
+  .cart-quantity-input {
+    height: 34px;
+    width: 50px;
+    border-radius: 5px;
+    border: 1px solid #56CCF2;
+    background-color: #eee;
+    color: #333;
+    padding: 0;
+    text-align: center;
+    font-size: 1.2em;
+    margin-right: 25px;
+  }
+  
+  .cart-row:last-child {
+    border-bottom: 1px solid black;
+  }
+  
+  .cart-row:last-child .cart-column {
+    border: none;
+  }
+  
+  .cart-total {
+    text-align: end;
+    margin-top: 10px;
+    margin-right: 10px;
+  }
+  
+  .cart-total-title {
+    font-weight: bold;
+    font-size: 1.5em;
+    color: black;
+    margin-right: 20px;
+  }
+  
+  .cart-total-price {
+    color: #333;
+    font-size: 1.1em;
+  }
+}
