--- a/css/contact.css
+++ b/css/contact.css
@@ -1,316 +1,3 @@
-.prod-menu .row {
-    font-family: 'Montserrat';
-    min-height: 110px;
-}
-
-.prod-banner {
-    background: url("../images/source/banner-home.jpg") no-repeat top;
-    min-height: 600px;
-    font-family: 'Montserrat';
-    background-size: cover;
-}
-
-.prod-banner-item,
-.prod-banner-item-logo {
-    display: inline-block;
-    color: white;
-    font-weight: bold;
-    text-transform: uppercase;
-    text-align: center;
-}
-.prod-banner-item-logo img:hover{
-   width: 110px;
-   height: 110px; 
-   cursor: pointer
-}
-.prod-banner-item:hover {
-    cursor: pointer;
-    border-bottom: white solid 2px;
-}
-
-.prod-banner-item.selected {
-    border-bottom: white solid 2px;
-}
-
-.prod-banner-headline {
-    color: white;
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
-.prod-banner-title {
-    font-size: 72px;
-}
-
-.prod-banner-desc {
-    font-size: 36px;
-}
-/*footer*/
-.footer-li,ul{
-    list-style: none;
-    color: white;
-}
-.footer-bs {
-    background-color:#13255E;
-    padding-top: 50px;
-    padding-bottom: 40px;
-    color: white; 
-    font-family: 'Montserrat';
-}
-.footer-bs h4{
-    margin-left: 20px;
-    line-height: 50px;
-    font-weight: 600;
-}
-.footer-bs a{
-    color: white;
-    margin-left: -20px;
-    font-size: 14px; 
-    line-height: 50px;  
-}
-.footer-icon span{
-    margin-left: 20px;
-}
-.footer-social h4{
-    margin-left: 0;
-}
-.footer-social li{
-    margin-left: -40px;
-    line-height: 50px;
-}
-.footer-ns h4{
-    margin-left: 0;
-}
-.footer-ns button{
-    background-color: #13255E;
-    border: 1px white solid;
-    border-radius: 20px;
-    color: white;
-    position: absolute;
-    right: 0px; 
-    padding-left: 30px;  
-    padding-right: 30px;
-}
-.footer-ns button:hover{
-    background-color:  white;
-    color:  #13255E;
-}
-.footer{
-    border-bottom: 1px white solid;
-}
-
-/* modal */
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    padding-top: 100px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-  }
-  
-  .modal-content {
-    margin: 0 auto;
-    width: 50%;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid rgba(0, 0, 0, .2);
-    border-radius: .3rem;
-    outline: 0;
-  
-  }
-  
-  .modal-body {
-    padding: 1rem;
-  }
-  
-  .modal-footer {
-    display: flex;
-    border-top: 1px solid #aaaaaa;
-    padding: 1rem;
-    flex-direction: row;
-    justify-content: flex-end;
-    border-top: 1px solid #aaaaaa;
-    padding: 1rem;
-  }
-  
-  .modal-footer>:not(:first-child) {
-    margin-left: .25rem;
-  }
-  
-  .btn {
-    cursor: pointer;
-    outline: none;
-    font-weight: 400;
-    line-height: 1.25;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    border: 1px solid transparent;
-    padding: .5rem 1rem;
-    font-size: 1rem;
-    border-radius: .25rem;
-    transition: all .2s ease-in-out;
-  }
-  
-  .modal-header {
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid #aaaaaa;
-    padding: 1rem;
-  }
-  
-  h5.modal-title {
-    font-size: 1.5rem;
-  }
-  
-  .close {
-    color: #aaaaaa;
-    font-size: 28px;
-    font-weight: bold;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-  }
-    /* cart */
-  #cart {
-    font-size: 25px;
-    color:  #13255E;
-    background: white;
-    border: 2px solid transparent;
-    border-radius: 10px;
-    outline: none;
-    margin-left: 1rem;
-    padding: 12px;
-    cursor: pointer;
-  }
-  
-  #cart:hover {
-    border-color: #13255E;
-  }
-.cart-header {
-    font-weight: bold;
-    font-size: 1.25em;
-    color: #333;
-  }
-  
-  .cart-column {
-    display: flex;
-    align-items: center;
-    border-bottom: 1px solid black;
-    margin-right: 1.5em;
-    padding-bottom: 10px;
-    margin-top: 10px;
-  }
-  
-  .cart-row {
-    display: flex;
-  }
-  
-  .cart-item {
-    width: 45%;
-  }
-  
-  .cart-price {
-    width: 20%;
-    font-size: 1.2em;
-    color: #333;
-  }
-  
-  .cart-quantity {
-    width: 35%;
-  }
-  
-  .cart-item-title {
-    color: #333;
-    margin-left: .5em;
-    font-size: 1.2em;
-  }
-  
-  .cart-item-image {
-    width: 75px;
-    height: auto;
-    border-radius: 10px;
-  }
-  
-  .btn-danger {
-    color: white;
-    background-color: #EB5757;
-    border: none;
-    border-radius: .3em;
-    font-weight: bold;
-  }
-  
-  .btn-danger:hover {
-    background-color: #CC4C4C;
-  }
-  
-  .cart-quantity-input {
-    height: 34px;
-    width: 50px;
-    border-radius: 5px;
-    border: 1px solid #56CCF2;
-    background-color: #eee;
-    color: #333;
-    padding: 0;
-    text-align: center;
-    font-size: 1.2em;
-    margin-right: 25px;
-  }
-  
-  .cart-row:last-child {
-    border-bottom: 1px solid black;
-  }
-  
-  .cart-row:last-child .cart-column {
-    border: none;
-  }
-  
-  .cart-total {
-    text-align: end;
-    margin-top: 10px;
-    margin-right: 10px;
-  }
-  
-  .cart-total-title {
-    font-weight: bold;
-    font-size: 1.5em;
-    color: black;
-    margin-right: 20px;
-  }
-  
-  .cart-total-price {
-    color: #333;
-    font-size: 1.1em;
-  }
-.contact-des{
-    margin-top: 40px;
-    margin-bottom: 40px;
-    font-size: 20px;
-}
-#map {
-    height: 400px;
- 
-    width: 100%;
-    text-align: center;
-  
-  }
 .item{
     padding-top: 50px;
 }
@@ -366,6 +53,136 @@ body{
     padding-top: 70px;
     font-size: 20px;
     background-image: url(./rice-paper-roll-4973365_960_720.jpg);
+}
+
+/*menu*/
+.prod-menu .row {
+    font-family: 'Montserrat';
+    min-height: 60px;
+    padding-top: 50px;
+}
+
+.prod-banner {
+    background: url(./banner-home.jpg);
+    min-height: 600px;
+    font-family: 'Montserrat';
+
+}
+
+.prod-banner-item,
+.prod-banner-item-logo {
+    display: inline-block;
+    color: white;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.prod-banner-item:hover {
+    cursor: pointer;
+    border-bottom: white solid 2px;
+}
+
+.prod-banner-item.selected {
+    border-bottom: white solid 2px;
+}
+
+.prod-banner-headline {
+    color: white;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.prod-banner-title {
+    font-size: 72px;
+}
+.prod-banner-desc {
+    font-size: 36px;
+}
+/*agd*/
+
+    .carousel { 
+    margin-bottom: 0;   
+    padding: 0 40px 30px 40px;
+    }
+     
+    .carousel-control { 
+    left: -12px;    
+    height: 40px;   
+    width: 40px;    
+    background: none repeat scroll 0 0 #222222; 
+    border: 4px solid #FFFFFF;  
+    border-radius: 23px 23px 23px 23px; 
+    margin-top: 90px;
+    }
+     
+    .carousel-control.right {   
+    right: -12px;
+    }
+     
+    .carousel-indicators {  
+    right: 50%; top: auto;  
+    bottom: -10px;  margin-right: -19px;
+    }
+    /* The colour of the indicators */
+    .carousel-indicators li {   
+    background: #cecece;
+    }
+    .carousel-indicators .active {  
+    background: #428bca;
+    }
+    /*footer*/
+.footer-li,ul{
+    list-style: none;
+    color: white;
+}
+.footer-bs {
+    background-color:#13255E;
+    padding-top: 50px;
+    padding-bottom: 40px;
+    color: white; 
+    font-family: 'Montserrat';
+}
+.footer-bs h4{
+    margin-left: 20px;
+    line-height: 50px;
+    font-weight: 600;
+}
+.footer-bs a{
+    color: white;
+    margin-left: -20px;
+    font-size: 14px; 
+    line-height: 50px;  
+}
+.footer-icon span{
+    margin-left: 20px;
+}
+.footer-social h4{
+    margin-left: 0;
+}
+.footer-social li{
+    margin-left: -40px;
+    line-height: 50px;
+}
+.footer-ns h4{
+    margin-left: 0;
+}
+.footer-ns button{
+    background-color: #13255E;
+    border: 1px white solid;
+    border-radius: 20px;
+    color: white;
+    position: absolute;
+    right: 0px; 
+    padding-left: 30px;  
+    padding-right: 30px;
+}
+.footer-ns button:hover{
+    background-color:  white;
+    color:  #13255E;
+}
+.footer{
+    border-bottom: 1px white solid;
 }
 
 
