--- a/css/contact.css
+++ b/css/contact.css
@@ -52,7 +52,7 @@ body{
     padding:50px;
     padding-top: 70px;
     font-size: 20px;
-    background-image: url(./rice-paper-roll-4973365_960_720.jpg);
+    background-image: url(images/source/rice-paper-roll-4973365_960_720.jpg);
 }
 
 /*menu*/
@@ -63,7 +63,7 @@ body{
 }
 
 .prod-banner {
-    background: url(./banner-home.jpg);
+    background: url(images/source/banner-home.jpg);
     min-height: 600px;
     font-family: 'Montserrat';
 
