--- a/css/contact.css
+++ b/css/contact.css
@@ -1,58 +1,12 @@
-.item{
-    padding-top: 50px;
-}
-
-li ul{
-    display: inline-block;
-    list-style: none;
-}
-a:hover{
-    color: #adadad;
-}
-.menu{
-    margin-top: 30px;
-    margin-bottom: 20px;    
-}
-.menu ul li{
-    display: inline-block;
-    padding: 10px 20px;
-}
-#icon{
-    color: floralwhite;
-    text-align: center;
-    font size: 120px;
-}
-.c{
-    padding-left: 60px;
-    font-size: 20px;
-    color: floralwhite;
-}
-body{
-    font-family: 'Montserrat';
-}
 #contact{
     padding-left: 50px;
-}
-#nen{
-    width: 100%;
-    height: 550px;
-    padding-bottom:30px;
-}
-#us{
-    height: 100px;
-    text-align: center;
-    font-size: 80px;
-    color: floralwhite;
-    background: crimson;
-    padding-bottom: 50px;
-   
 }
 .story{
     height: 500px;
     padding:50px;
     padding-top: 70px;
     font-size: 20px;
-    background-image: url(images/source/rice-paper-roll-4973365_960_720.jpg);
+    background-image: url(../images/source/rice-paper-roll-4973365_960_720.jpg);
 }
 
 /*menu*/
@@ -63,7 +17,7 @@ body{
 }
 
 .prod-banner {
-    background: url(images/source/banner-home.jpg);
+    background: url(../images/source/banner-home.jpg);
     min-height: 600px;
     font-family: 'Montserrat';
 
@@ -106,7 +60,7 @@ body{
     padding: 0 40px 30px 40px;
     }
      
-    .carousel-control {
+    .carousel-control { 
     left: -12px;    
     height: 40px;   
     width: 40px;    
