--- a/css/about-us.css
+++ b/css/about-us.css
@@ -5,7 +5,7 @@
 }
 
 .prod-banner {
-    background: url("../images/source/banner-home.jpg") no-repeat fixed top;
+    background: url("../images/source/banner-home.jpg") no-repeat fixed;
     min-height: 500px;
     font-family: 'Montserrat';
     background-size: contain;
@@ -93,6 +93,9 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+.footer-icon{
+    margin-left: 20px;
 }
 
 
